--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 >
                   CONTACT
                 </p></a
-              ><a href="https://t.me/Brettcronos_portal"
+              ><a href="https://t.me/"
                 ><p
                   class="font-semibold hover:text-lyllw transition-all ease-in-out duration-300"
                 >
                   TELEGRAM
                 </p></a
-              ><a href=" https://twitter.com/Brett_cronos"
+              ><a href=" https://twitter.com/"
                 ><p
                   class="font-semibold hover:text-lyllw transition-all ease-in-out duration-300"
                 >
@@ -65,11 +65,13 @@
               >
             </div>
             <div class="gap-x-4 items-center hidden lg:flex">
-              <a href="https://vvs.finance/swap">
+              <a
+                href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000000000000&fixed=in"
+              >
                 <button
                   class="px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-lg bg-gradient-to-tr from-yllw/10 to-lyllw/10 font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                 >
-                  Buy on vvs finance
+                  Buy Now
                 </button></a
               >
             </div>
@@ -131,7 +133,8 @@
             <div class="w-3/4 h-[1px] bg-white/50" style="width: 100%"></div>
             <div class="flex flex-col items-center justify-center gap-y-12">
               <div class="flex gap-x-4" style="opacity: 1; transform: none">
-                <a href="https://vvs.finance/swap"
+                <a
+                  href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000000000000&fixed=in"
                   ><button
                     class="bg-white text-lyllw uppercase text-xl px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/10 to-lyllw/10 flex gap-x-3 items-center font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                   >
@@ -155,7 +158,7 @@
                       <path d="m18 22-3-3 3-3"></path>
                       <path d="m6 2 3 3-3 3"></path>
                     </svg></button></a
-                ><a href="https://dexscreener.com/cronos"
+                ><a href="https://dexscreener.com/solana"
                   ><button
                     class="bg-white text-lyllw uppercase text-xl px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/10 to-lyllw/10 flex gap-x-3 items-center font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                   >
@@ -319,15 +322,15 @@
                   WOLF on AVAX reached a 30 million market cap
                 </p>
                 <p class="text-2xl" style="opacity: 1; transform: none">
-                  What will BRETT reach on CRONOS CHAIN ? With a rapidly growing
+                  What will BRETT reach on solana CHAIN ? With a rapidly growing
                   community of supporters, believers, an accelerating ecosystem
-                  in CRONOS , and a potential layer-1 blockchain
+                  in solana , and a potential layer-1 blockchain
                 </p> -->
                 <div
                   class="flex gap-x-4 items-center justify-center lg:items-start lg:justify-start"
                   style="opacity: 1; transform: none"
                 >
-                  <a href="https://t.me/Brettcronos_portal"
+                  <a href="https://t.me/"
                     ><button
                       class="bg-white text-lyllw uppercase text-xl px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/10 to-lyllw/10 flex gap-x-3 items-center font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                     >
@@ -345,7 +348,7 @@
                           d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"
                         ></path>
                       </svg></button></a
-                  ><a href="https://twitter.com/Brett_cronos">
+                  ><a href="https://twitter.com/">
                     <button
                       class="bg-white text-lyllw uppercase text-xl px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/10 to-lyllw/10 flex gap-x-3 items-center font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                     >
@@ -420,7 +423,8 @@
                   Phon Tom
                 </p>
               </div>
-              <a href="https://vvs.finance/swap"
+              <a
+                href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000000000000&fixed=in"
                 ><button
                   class="px-4 py-3 border-solid border-[1px] border-lyllw/100 rounded-full bg-gradient-to-tr from-yllw/10 to-lyllw/10 flex gap-x-3 items-center font-semibold z-50 hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/20 transition-all ease-in-out duration-300"
                   style="opacity: 1"
@@ -536,7 +540,7 @@
                           Go to VVS FINANCE:
                         </p>
                         <p class="" style="opacity: 1; transform: none">
-                          Connect to VVS FINANCE. Go to https://vvs.finance/swap
+                          Connect to VVS FINANCE. Go to https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000000000000&fixed=in
                           in google chrome or on the browser inside your wallet
                           app. Connect your wallet. Paste the $BRETT token
                           address into VVS FINANCE, select BRETT, and confirm.
@@ -580,7 +584,8 @@
                 </div>
               </div> -->
               <div class="flex gap-x-4" style="opacity: 1">
-                <a href="https://vvs.finance/swap"
+                <a
+                  href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000000000000&fixed=in"
                   ><button
                     class="px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/100 to-lyllw/100 flex gap-x-3 items-center font-semibold hover:scale-[1.05] hover:from-yllw/20 hover:to-lyllw/100 transition-all ease-in-out duration-300"
                   >
@@ -602,7 +607,7 @@
                         d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                       ></path>
                     </svg></button></a
-                ><a href="https://dexscreener.com/cronos"
+                ><a href="https://dexscreener.com/solana"
                   ><button
                     class="px-4 py-3 border-solid border-[1px] border-lyllw/70 rounded-full bg-gradient-to-tr from-yllw/30 to-lyllw/30 font-semibold hover:scale-[1.05] hover:from-yllw/40 hover:to-lyllw/40 transition-all ease-in-out duration-300"
                   >
@@ -750,7 +755,7 @@
                 style="opacity: 1"
               >
                 <div class="flex gap-x-4 text-6xl text-white">
-                  <a href="https://twitter.com/Brett_cronos"
+                  <a href="https://twitter.com/"
                     ><svg
                       stroke="currentColor"
                       fill="currentColor"
@@ -764,7 +769,7 @@
                       <path
                         d="M928 254.3c-30.6 13.2-63.9 22.7-98.2 26.4a170.1 170.1 0 0 0 75-94 336.64 336.64 0 0 1-108.2 41.2A170.1 170.1 0 0 0 672 174c-94.5 0-170.5 76.6-170.5 170.6 0 13.2 1.6 26.4 4.2 39.1-141.5-7.4-267.7-75-351.6-178.5a169.32 169.32 0 0 0-23.2 86.1c0 59.2 30.1 111.4 76 142.1a172 172 0 0 1-77.1-21.7v2.1c0 82.9 58.6 151.6 136.7 167.4a180.6 180.6 0 0 1-44.9 5.8c-11.1 0-21.6-1.1-32.2-2.6C211 652 273.9 701.1 348.8 702.7c-58.6 45.9-132 72.9-211.7 72.9-14.3 0-27.5-.5-41.2-2.1C171.5 822 261.2 850 357.8 850 671.4 850 843 590.2 843 364.7c0-7.4 0-14.8-.5-22.2 33.2-24.3 62.3-54.4 85.5-88.2z"
                       ></path></svg></a
-                  ><a href="https://t.me/Brettcronos_portal"
+                  ><a href="https://t.me/"
                     ><svg
                       stroke="currentColor"
                       fill="currentColor"
