--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               class="font-primary text-2xl tracking-[0.5rem] text-center"
               style="opacity: 1; transform: none"
             >
-              PhonTom has come to Solana network to be the official cat mascot
+              PhanTom has come to Solana network to be the official cat mascot
               of Phantom.
             </p>
             <div class="w-3/4 h-[1px] bg-white/50" style="width: 100%"></div>
@@ -274,7 +274,7 @@
                 class="text-primary text-4xl lg:text-6xl leading-[2rem] lg:leading-[5rem] bg-gradient-to-r text-white w-max text-transparent pointer-events-none"
                 style="opacity: 1; transform: none"
               >
-                PhonTom
+                PhanTom
               </p>
               <div
                 class="w-full h-[2px] bg-gradient-to-r from-lyllw to-yllw hidden lg:block"
@@ -420,7 +420,7 @@
                   class="text-primary bg-gradient-to-r text-white w-max text-transparent pointer-events-none text-stroke"
                   style="opacity: 1; transform: none"
                 >
-                  Phon Tom
+                  Phan Tom
                 </p>
               </div>
               <a
@@ -731,7 +731,7 @@
                 class="tracking-[0.5rem] font-bold w-max whitespace-nowrap"
                 style="opacity: 1; transform: none"
               >
-                CONNECT WITH PhonTom
+                CONNECT WITH PhanTom
               </p>
             </div>
             <div
@@ -795,7 +795,7 @@
               <p
                 class="text-primary text-9xl text-center text-white w-max text-transparent pointer-events-none text-stroke"
               >
-                PhonTom
+                PhanTom
               </p>
             </div>
             <div class="flex justify-center w-full py-4">
